--- a/packages/renderer/src/app.scss
+++ b/packages/renderer/src/app.scss
@@ -1,8 +1,7 @@
 .app {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
+    flex-grow: 1;
     color: var(--color-1-text);
     background-color: var(--color-1);
     user-select: none;
@@ -11,8 +10,8 @@
     .app-container {
         display: flex;
         flex-direction: row;
-        width: 100%;
-        height: 100%;
+        flex-grow: 1;
+        overflow: hidden;
 
         .navbar {
             flex-grow: 0;
@@ -80,4 +79,43 @@
     flex-grow: 1;
     border-radius: 4px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    margin: 0.5rem;
+    padding: 0.75rem;
+
+    .card-title {
+        flex-grow: 1;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 1rem;
+    }
+
+    .card-body {
+        display: block;
+    }
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    padding: 0.25rem;
+
+    .container-title {
+        flex-grow: 1;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 1rem;
+    }
+
+    .container-body {
+        display: block;
+    }
+}
+
+.panel {
+    flex-grow: 1;
+    text-align: left;
 }
