--- a/packages/renderer/src/components/TitleBar.scss
+++ b/packages/renderer/src/components/TitleBar.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     user-select: none;
-    height: 1.75rem;
+    min-height: 1.75rem;
     color: var(--color-4-text);
     background-color: var(--color-4);
     
@@ -11,7 +11,7 @@
         z-index: 3;
         flex-grow: 1;
         width: 100%;
-        height: 1.75rem;
+        min-height: 1.75rem;
         pointer-events: none;
         box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 16px 16px inset;
     }
