--- a/packages/renderer/src/index.scss
+++ b/packages/renderer/src/index.scss
@@ -6,13 +6,16 @@ body {
     background-color: #ffffff;
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
 }
 
 #root {
-    width: 100%;
-    height: 100%;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
 }
 
 body {
