--- a/packages/renderer/src/app.scss
+++ b/packages/renderer/src/app.scss
@@ -88,14 +88,15 @@
     margin: 0.5rem;
     padding: 0.75rem;
 
-    .card-title {
+    .title {
         flex-grow: 1;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size: 1rem;
     }
 
-    .card-body {
+    .body {
         display: block;
+        overflow: auto;
     }
 }
 
