--- a/packages/renderer/src/app.scss
+++ b/packages/renderer/src/app.scss
@@ -89,7 +89,8 @@
     padding: 0.75rem;
 
     .title {
-        flex-grow: 1;
+        flex-grow: 0;
+        padding: 0 0 0.5rem 0;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size: 1rem;
     }
