--- a/packages/renderer/src/views/MaterialPaletteView.scss
+++ b/packages/renderer/src/views/MaterialPaletteView.scss
@@ -2,19 +2,26 @@
     display: flex;
     flex-direction: row;
     overflow-y: auto;
+    align-content: flex-start;
 
     .preview {
         display: flex;
         flex-direction: column;
+        align-items: center;
         flex-grow: 1;
-        justify-content: center;
-        margin: 0 auto;
+        padding-top: 0.25rem;
 
-        @media only screen and (min-width: 692px) {
-            flex-direction: row;
-            .virtual-screen {
-                margin-left: 1rem;
-            }
+        .title {
+            cursor: pointer;
+            padding: 0.5rem 1rem;
+            border-radius: 4px;
+            transition: color 0.25s ease-out, background-color 0.25s ease-out;
+        }
+        .title:hover {
+            color: var(--color-4-text);
+            background-color: var(--color-4);
+            box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+            transition: color 0.25 ease-in, background-color 0.25s ease-in;
         }
     }
 }
