--- a/packages/renderer/src/app.scss
+++ b/packages/renderer/src/app.scss
@@ -1,3 +1,7 @@
+body {
+    --sb-size: 0.5rem;
+}
+
 .app {
     display: flex;
     flex-direction: column;
@@ -120,4 +124,39 @@
 .panel {
     flex-grow: 1;
     text-align: left;
+}
+
+.clickable {
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+    transition: color 0.25s ease-out, background-color 0.25s ease-out;
+}
+.clickable:hover {
+    color: var(--color-4-text);
+    background-color: var(--color-4);
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    transition: color 0.25 ease-in, background-color 0.25s ease-in;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: var(--sb-size);
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background-color: var(--color-2);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background-color: var(--color-3);
+    opacity: 1;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--color-4);
+    opacity: 0.9;
 }
