--- a/packages/renderer/src/components/MaterialColorViewer.scss
+++ b/packages/renderer/src/components/MaterialColorViewer.scss
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
         }
-        .body {            
+        .body {
             display: flex;
             flex-direction: row;
             align-items: flex-end;
@@ -24,8 +24,10 @@
             }
             .color-text {
                 font-size: small;
-                font-family: 'Courier New', Courier, monospace;
+                font-family: "Courier New", Courier, monospace;
                 margin: 2px;
+                user-select: text;
+                -webkit-user-select: text;
             }
         }
     }
