--- a/packages/renderer/src/app.scss
+++ b/packages/renderer/src/app.scss
@@ -82,7 +82,8 @@ body {
     padding: 0.5rem;
     flex-grow: 1;
     border-radius: 4px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+        rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .card {
@@ -95,14 +96,33 @@ body {
     .title {
         flex-grow: 0;
         padding: 0 0 0.5rem 0;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+            "Helvetica Neue", sans-serif;
         font-size: 1rem;
     }
 
     .body {
         display: block;
-        overflow: auto;
     }
+}
+
+.vertical-scroll {
+    overflow-y: auto;
+    mask-image: linear-gradient(to top, transparent, black), linear-gradient(to left, transparent var(--sb-size), black var(--sb-size));
+    mask-size: 100% 0;
+    mask-position: left bottom;
+    -webkit-mask-image: linear-gradient(to top, transparent, black),
+        linear-gradient(to left, transparent var(--sb-size), black var(--sb-size));
+    -webkit-mask-size: 100% 20000px;
+    -webkit-mask-position: left bottom;
+    transition: mask-position .75s, -webkit-mask-position 0.75s;
+    padding-left: var(--sb-size);
+    padding-right: var(--sb-size);
+}
+
+.vertical-scroll:hover {
+    mask-position: left top;
+    -webkit-mask-position: left top;
 }
 
 .container {
@@ -112,7 +132,8 @@ body {
 
     .container-title {
         flex-grow: 1;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+            "Helvetica Neue", sans-serif;
         font-size: 1rem;
     }
 
@@ -140,19 +161,21 @@ body {
 }
 
 /* width */
-::-webkit-scrollbar {
+::-webkit-scrollbar {    
     width: var(--sb-size);
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background-color: var(--color-2);
+    background-color: var(--color-2);    
+    border-radius: 1rem;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
     background-color: var(--color-3);
     opacity: 1;
+    border-radius: 1rem;
 }
 
 /* Handle on hover */
