--- a/packages/renderer/src/components/MaterialColorViewer.scss
+++ b/packages/renderer/src/components/MaterialColorViewer.scss
@@ -15,6 +15,7 @@
             display: flex;
             flex-direction: row;
             align-items: flex-end;
+            overflow: hidden;
             .color-block {
                 margin: 4px;
                 width: 0.75rem;
